@@ -1,3 +1,11 @@
+Sun Nov  1 23:00:18 PST 1998 Manish Singh <yosh@gimp.org>
+
+	* glib.h
+	* configure.in: endian macros defined using the glibconfig.h
+	mechanism now
+
+	* ghook.c: casts for GHookFunc and GHookCheckFunc to avoid warnings
+
 Sat Oct 31 20:14:22 PST 1998 Manish Singh <yosh@gimp.org>
 
 	* applied glib-tml-981101-1 patch from Tor Lillqvist (ChangeLog
