@@ -608,112 +608,34 @@ typedef gint32	GTime;
     (((guint32) (val) & (guint32) 0x00ff00ffU) << 8) | \
     (((guint32) (val) & (guint32) 0xff00ff00U) >> 8)))
 
-#if G_BYTE_ORDER == G_LITTLE_ENDIAN
-#  define GINT16_TO_LE(val)		((gint16) (val))
-#  define GUINT16_TO_LE(val)		((guint16) (val))
-#  define GINT16_TO_BE(val)		((gint16) GUINT16_SWAP_LE_BE (val))
-#  define GUINT16_TO_BE(val)		(GUINT16_SWAP_LE_BE (val))
-#  define GINT16_FROM_LE(val)		((gint16) (val))
-#  define GUINT16_FROM_LE(val)		((guint16) (val))
-#  define GINT16_FROM_BE(val)		((gint16) GUINT16_SWAP_LE_BE (val))
-#  define GUINT16_FROM_BE(val)		(GUINT16_SWAP_LE_BE (val))
-#  define GINT32_TO_LE(val)		((gint32) (val))
-#  define GUINT32_TO_LE(val)		((guint32) (val))
-#  define GINT32_TO_BE(val)		((gint32) GUINT32_SWAP_LE_BE (val))
-#  define GUINT32_TO_BE(val)		(GUINT32_SWAP_LE_BE (val))
-#  define GINT32_FROM_LE(val)		((gint32) (val))
-#  define GUINT32_FROM_LE(val)		((guint32) (val))
-#  define GINT32_FROM_BE(val)		((gint32) GUINT32_SWAP_LE_BE (val))
-#  define GUINT32_FROM_BE(val)		(GUINT32_SWAP_LE_BE (val))
-#  ifdef G_HAVE_GINT64
-#  define GINT64_TO_LE(val)		((gint64) (val))
-#  define GUINT64_TO_LE(val)		((guint64) (val))
-#  define GINT64_TO_BE(val)		((gint64) GUINT64_SWAP_LE_BE (val))
-#  define GUINT64_TO_BE(val)		(GUINT64_SWAP_LE_BE (val))
-#  define GINT64_FROM_LE(val)		((gint64) (val))
-#  define GUINT64_FROM_LE(val)		((guint64) (val))
-#  define GINT64_FROM_BE(val)		((gint64) GUINT64_SWAP_LE_BE (val))
-#  define GUINT64_FROM_BE(val)		(GUINT64_SWAP_LE_BE (val))
-#  endif
-#elif G_BYTE_ORDER == G_BIG_ENDIAN
-#  define GINT16_TO_BE(val)		((gint16) (val))
-#  define GUINT16_TO_BE(val)		((guint16) (val))
-#  define GINT16_TO_LE(val)		((gint16) GUINT16_SWAP_LE_BE (val))
-#  define GUINT16_TO_LE(val)		(GUINT16_SWAP_LE_BE (val))
-#  define GINT16_FROM_BE(val)		((gint16) (val))
-#  define GUINT16_FROM_BE(val)		((guint16) (val))
-#  define GINT16_FROM_LE(val)		((gint16) GUINT16_SWAP_LE_BE (val))
-#  define GUINT16_FROM_LE(val)		(GUINT16_SWAP_LE_BE (val))
-#  define GINT32_TO_BE(val)		((gint32) (val))
-#  define GUINT32_TO_BE(val)		((guint32) (val))
-#  define GINT32_TO_LE(val)		((gint32) GUINT32_SWAP_LE_BE (val))
-#  define GUINT32_TO_LE(val)		(GUINT32_SWAP_LE_BE (val))
-#  define GINT32_FROM_BE(val)		((gint32) (val))
-#  define GUINT32_FROM_BE(val)		((guint32) (val))
-#  define GINT32_FROM_LE(val)		((gint32) GUINT32_SWAP_LE_BE (val))
-#  define GUINT32_FROM_LE(val)		(GUINT32_SWAP_LE_BE (val))
-#  ifdef G_HAVE_GINT64
-#  define GINT64_TO_BE(val)		((gint64) (val))
-#  define GUINT64_TO_BE(val)		((guint64) (val))
-#  define GINT64_TO_LE(val)		((gint64) GUINT64_SWAP_LE_BE (val))
-#  define GUINT64_TO_LE(val)		(GUINT64_SWAP_LE_BE (val))
-#  define GINT64_FROM_BE(val)		((gint64) (val))
-#  define GUINT64_FROM_BE(val)		((guint64) (val))
-#  define GINT64_FROM_LE(val)		((gint64) GUINT64_SWAP_LE_BE (val))
-#  define GUINT64_FROM_LE(val)		(GUINT64_SWAP_LE_BE (val))
-#  endif
-#else
-/* PDP stuff not implemented */
+/* The TO_?E stuff is defined in glibconfig.h. The transformation is symmetric,
+   so the FROM just maps to the TO.
+ */
+#define GINT16_FROM_LE(val)	(GINT16_TO_LE (val))
+#define GUINT16_FROM_LE(val)	(GUINT16_TO_LE (val))
+#define GINT16_FROM_BE(val)	(GINT16_TO_BE (val))
+#define GUINT16_FROM_BE(val)	(GUINT16_TO_BE (val))
+#define GINT32_FROM_LE(val)	(GINT32_TO_LE (val))
+#define GUINT32_FROM_LE(val)	(GUINT32_TO_LE (val))
+#define GINT32_FROM_BE(val)	(GINT32_TO_BE (val))
+#define GUINT32_FROM_BE(val)	(GUINT32_TO_BE (val))
+
+#ifdef G_HAVE_GINT64
+#define GINT64_FROM_LE(val)	(GINT32_TO_LE (val))
+#define GUINT64_FROM_LE(val)	(GUINT32_TO_LE (val))
+#define GINT64_FROM_BE(val)	(GINT32_TO_BE (val))
+#define GUINT64_FROM_BE(val)	(GUINT32_TO_BE (val))
 #endif
 
-#if (SIZEOF_LONG == 8)
-#  define GLONG_TO_LE(val)		((glong) GINT64_TO_LE (val))
-#  define GULONG_TO_LE(val)		((gulong) GUINT64_TO_LE (val))
-#  define GLONG_TO_BE(val)		((glong) GINT64_TO_BE (val))
-#  define GULONG_TO_BE(val)		((gulong) GUINT64_TO_BE (val))
-#  define GLONG_FROM_LE(val)		((glong) GINT64_FROM_LE (val))
-#  define GULONG_FROM_LE(val)		((gulong) GUINT64_FROM_LE (val))
-#  define GLONG_FROM_BE(val)		((glong) GINT64_FROM_BE (val))
-#  define GULONG_FROM_BE(val)		((gulong) GUINT64_FROM_BE (val))
-#elif (SIZEOF_LONG == 4)
-#  define GLONG_TO_LE(val)		((glong) GINT32_TO_LE (val))
-#  define GULONG_TO_LE(val)		((gulong) GUINT32_TO_LE (val))
-#  define GLONG_TO_BE(val)		((glong) GINT32_TO_BE (val))
-#  define GULONG_TO_BE(val)		((gulong) GUINT32_TO_BE (val))
-#  define GLONG_FROM_LE(val)		((glong) GINT32_FROM_LE (val))
-#  define GULONG_FROM_LE(val)		((gulong) GUINT32_FROM_LE (val))
-#  define GLONG_FROM_BE(val)		((glong) GINT32_FROM_BE (val))
-#  define GULONG_FROM_BE(val)		((gulong) GUINT32_FROM_BE (val))
-#endif
+#define GLONG_FROM_LE(val)	(GLONG_TO_LE (val))
+#define GULONG_FROM_LE(val)	(GULONG_TO_LE (val))
+#define GLONG_FROM_BE(val)	(GLONG_TO_BE (val))
+#define GULONG_FROM_BE(val)	(GULONG_TO_BE (val))
 
-#if (SIZEOF_INT == 8)
-#  define GINT_TO_LE(val)		((gint) GINT64_TO_LE (val))
-#  define GUINT_TO_LE(val)		((guint) GUINT64_TO_LE (val))
-#  define GINT_TO_BE(val)		((gint) GINT64_TO_BE (val))
-#  define GUINT_TO_BE(val)		((guint) GUINT64_TO_BE (val))
-#  define GINT_FROM_LE(val)		((gint) GINT64_FROM_LE (val))
-#  define GUINT_FROM_LE(val)		((guint) GUINT64_FROM_LE (val))
-#  define GINT_FROM_BE(val)		((gint) GINT64_FROM_BE (val))
-#  define GUINT_FROM_BE(val)		((guint) GUINT64_FROM_BE (val))
-#elif (SIZEOF_INT == 4)
-#  define GINT_TO_LE(val)		((gint) GINT32_TO_LE (val))
-#  define GUINT_TO_LE(val)		((guint) GUINT32_TO_LE (val))
-#  define GINT_TO_BE(val)		((gint) GINT32_TO_BE (val))
-#  define GUINT_TO_BE(val)		((guint) GUINT32_TO_BE (val))
-#  define GINT_FROM_LE(val)		((gint) GINT32_FROM_LE (val))
-#  define GUINT_FROM_LE(val)		((guint) GUINT32_FROM_LE (val))
-#  define GINT_FROM_BE(val)		((gint) GINT32_FROM_BE (val))
-#  define GUINT_FROM_BE(val)		((guint) GUINT32_FROM_BE (val))
-#elif (SIZEOF_INT == 2)
-#  define GINT_TO_LE(val)		((gint) GINT16_TO_LE (val))
-#  define GUINT_TO_LE(val)		((guint) GUINT16_TO_LE (val))
-#  define GINT_TO_BE(val)		((gint) GINT16_TO_BE (val))
-#  define GUINT_TO_BE(val)		((guint) GUINT16_TO_BE (val))
-#  define GINT_FROM_LE(val)		((gint) GINT16_FROM_LE (val))
-#  define GUINT_FROM_LE(val)		((guint) GUINT16_FROM_LE (val))
-#  define GINT_FROM_BE(val)		((gint) GINT16_FROM_BE (val))
-#  define GUINT_FROM_BE(val)		((guint) GUINT16_FROM_BE (val))
-#endif
+#define GINT_FROM_LE(val)	(GINT_TO_LE (val))
+#define GUINT_FROM_LE(val)	(GUINT_TO_LE (val))
+#define GINT_FROM_BE(val)	(GINT_TO_BE (val))
+#define GUINT_FROM_BE(val)	(GUINT_TO_BE (val))
 
 /* Portable versions of host-network order stuff
  */
